--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@font-face {
+  font-family: "ElMessiri";
+  src: local("ElMessiri"),
+    url("./fonts/ElMessiri-VariableFont_wght.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Bodoni";
+  src: local("Bodoni"), url("./fonts/BodoniFLF-Roman.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Bodoni-bold";
+  src: local("Bodoni-bold"),
+    url("./fonts/BodoniFLF-Bold.ttf") format("truetype");
 }
